Fixed: Admin Bar overlap issue with main menu.

--- a/style.css
+++ b/style.css
@@ -2717,7 +2717,7 @@ article.panel-placeholder {
 
 	.admin-bar .site-navigation-fixed.navigation-top,
 	.admin-bar .site-navigation-hidden.navigation-top {
-		top: 32px;
+		top: 46px;
 	}
 
 	.site-navigation-fixed.navigation-top .wrap,
